<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.translateapp.fragments.mainActivity.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_jeu"
        android:name="com.example.translateapp.fragments.mainActivity.jeu.JeuFragment"
        android:label="@string/Jeu"
        tools:layout="@layout/fragment_jeu" />

    <fragment
        android:id="@+id/navigation_parametres"
        android:name="com.example.translateapp.fragments.mainActivity.parametres.ParametresFragment"
        android:label="@string/Params"
        tools:layout="@layout/fragment_param" />
</navigation>